--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
 <div class="splash-container">
     <div class="splash">
-        <img src="img/floral4.jpg" height="500px"  width="1200px">
-         <h1 class="splash-head">Soluções para sua Empresa</h1> 
+        <img src="img/floral4.jpg" class="pure-img-responsive" style="max-height: 500px; width: 100%; object-fit: cover;">
+        <h1 class="splash-head">Soluções para sua Empresa</h1> 
         <p class="splash-subhead">
            
         </p>
