--- a/index.html
+++ b/index.html
@@ -59,6 +59,54 @@
 .dropdown .submenu li {
     margin: 5px 0;
 }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+#logo img {
+    max-width: 100%;
+    height: auto;
+}
+
+.home-menu {
+    padding: 0.5em;
+    background-color: #f5f5f5;
+}
+
+.busca {
+    margin-top: 1em;
+    text-align: center;
+}
+
+#busca-melhorada form {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.searchbox input {
+    padding: 0.5em;
+    width: 200px;
+    max-width: 90%;
+}
+
+.btn-busca {
+    padding: 0.5em 1em;
+}
+
+.footer {
+    padding: 1em;
+    font-size: 0.9em;
+    background: #f0f0f0;
+    margin-top: 2em;
+}
+
+.footer2 {
+    margin: 0 0.5em;
+}
+
 </style>
 </head>
 
